Fix card align bug

--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -20,7 +20,7 @@
         padding: 1rem;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        align-items: center;
 
         @media (min-width: 850px) {
             flex-direction: row;
